Fixed/updated timeline for city 4.

--- a/finalprogram.html
+++ b/finalprogram.html
@@ -349,7 +349,7 @@
 
     /* create experiment timeline array */
     var timeline = [];
-    /*timeline.push(welcome_block);
+    timeline.push(welcome_block);
     timeline.push(instructions_block);
     timeline.push(city1_block);       //move to city 1
     timeline.push(c1b3_test_block);
@@ -478,30 +478,19 @@
     timeline.push(c3v2b3_test_block);
     timeline.push(c3v2b1_test_block);
     timeline.push(city4_block);       //move to city 4
-    timeline.push(c4b3_test_block);
-    timeline.push(c4b2_test_block);
     timeline.push(c4b1_test_block);
     timeline.push(c4b3_test_block);
     timeline.push(c4b2_test_block);
-    timeline.push(c4b1_test_block);
     timeline.push(c4b2_test_block);
     timeline.push(c4b1_test_block);
-    timeline.push(c4b1_test_block);
-    timeline.push(c4b2_test_block);
-    timeline.push(c4b3_test_block);
     timeline.push(c4b3_test_block);
     timeline.push(c4b2_test_block);
-    timeline.push(c4b1_test_block);
     timeline.push(c4b2_test_block);
+    timeline.push(c4b1_test_block);
     timeline.push(c4b3_test_block);
     timeline.push(c4b3_test_block);
     timeline.push(c4b1_test_block);
-    timeline.push(c4b3_test_block);
-    timeline.push(c4b3_test_block);   */
-    timeline.push(c4b2_test_block);
-    timeline.push(c4b2_test_block);
-    timeline.push(c4b1_test_block);
-    timeline.push(c4b1_test_block);
+
 
 
     /* start the experiment */
