Added images on instruction page.

--- a/finalprogram.html
+++ b/finalprogram.html
@@ -55,9 +55,14 @@
         text: "<p>Welcome to your new job as our building manager! </p>" +
         "<p>We've had some trouble hanging onto past managers, but I don't know why. </p>" +
         "<p>You get to travel to new cities, and the pay's great.  </p>" +
-        "<div class='left center-content'><img src='img/city_1.png'></img>" +
-        "<div class='center-content'><img src='img/city_2.png'></img>" +
-        "<div class='right center-content'><img src='img/city_3.png'></img>",         //need to resize images
+        "<p>Our houses usually have one of three problems: lawns that need to be mowed, </p>"+
+        "<p>houses that need to be painted, or pipes that need to be fixed.</p>"+
+        "<div class='center-content'><img src='img/lawnmower.png'></img>" +
+        "<p>To mow a lawn, press the J key.</p> " +
+        "<div class='center-content'><img src='img/paintbrush.png'></img>" +
+        "<p>To repaint a house, press the K key.</p>"+
+        "<div class='center-content'><img src='img/plumbing.png'></img>"+
+        "<p>To fix the pipes, press the L key.</p>",                 //need to resize images
         timing_post_trial: 2000
     };
 
